styles.css
@import url('https://fonts.googleapis.com/css?family=Fira+Code&display=swap');

.BL_modal {
  display: flex;
  align-items: center;
  padding: 1rem;
  background-color: #fff;
  border-radius: 0.25rem;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  /* modal specific */
  position: absolute;
  z-index: 99999;
  overflow: auto;
  top: calc(100vh - 80%);
  left: calc(100vw - 80%);
  right: calc(100vw - 80%);
  box-shadow: 0 0 5rem 2rem silver;
  /* animation: change-background 4s ease-in-out infinite alternate-reverse; */
}

#issue-select {
  align-items: center;
  color: black;
  border-radius: 0.25rem;
  background-color: #eee;
}

.BL_issue-label {
  font-size: 0.7rem;
  font-family: monospace;
  padding: 0.2rem;
  text-overflow: ellipsis;
}

.BL_issue-dropdown {
  display: none;
  position: absolute;
  color: black;
  background: #f4ffffb0;
  border-radius: 1rem;
  padding: 0.5rem;
  backdrop-filter: blur(10px);
  box-shadow: 2px 4px 1rem #bebebe;
}

.BL_issue-dropdown > option {
  padding: 0.3rem;
  cursor: pointer;
}

.BL_close-modal-btn {
  position: absolute;
  top: 1rem;
  right: 1rem;
  /* width: 2rem; */
  border: none;
  border-radius: 0.2rem;
  padding: 0.4rem 1rem;
  cursor: pointer;
}

.BL_open-modal-btn {
  position: fixed;
  top: 0.2rem;
  left: 45vw;
}

.BL_select {
  padding: 0;
  margin: 0;
  outline: none;
  font-family: inherit;
  /* font-size: 1rem; */
  color: #1f1e1e;
  line-height: 22px;
  border-radius: 3px;
}

@keyframes change-background {
  0% {
    box-shadow: 2px 4px 5rem 15px #69b7eb;
  }
  50% {
    box-shadow: 2px 4px 5rem 15px #b3dbd3;
  }
  75% {
    box-shadow: 2px 4px 5rem 15px #f4d6db;
  }
  100% {
    box-shadow: 2px 4px 5rem 15px #e9eb91;
  }
}

.BL_input {
  padding: 5px;
  border: 1px solid #ccc;
  border-radius: 3px;
  vertical-align: middle;
  font-family: inherit;
}
.BL_input.hours {
  width: 3rem;
}

.BL_input:hover,
.BL_textarea:hover,
.BL_select:hover {
  outline: none;
  border: 1px solid #095484;
}

.BL_option {
  background: #fff;
}

.BL_action_col {
  display: flex;
  text-align: left;
  gap: 0.5rem;
}

.BL_btn-block {
  text-align: center;
  display: flex;
  justify-content: center;
  gap: 0.5rem;
}

.BL_button {
  height: auto;
  padding: 0.5rem;
  border: none;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 0.5rem;
  box-shadow: 0px 0px 0.2rem silver ;
  font-size: 1rem;
  font-family: inherit;
  color: #222;
  cursor: pointer;
  /* background-color: #80e492; */
}

.BL_button:hover {
  background-color: white;
}

.BL_add-new-task {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 0.5rem;
  margin: 0.8rem;
}
.BL__comment-box {
  /* width: 20rem; */
}

#BL_table_dom {
  width: 100%;
}

.BL_message_box {
  color: purple;
  font-family: monospace;
}

.BL_task-table {
  width: 100%;
}

#total-hours {
  font-size: 1rem;
  background-color: #e3a3ae;
  padding: 0.5rem;
  border-radius: 0.4rem;
}

.BL_green {
  background-color: #79d8b8;
}

@media (max-width: 900px) {
  .BL_modal {
    top: 0%;
    left: 0%;
    right: 0%;
  }

  #BL_row,
  .BL_table-headings {
    display: grid;
    margin-bottom: 1rem;
    width: calc(100vw - 10%);
  }

  .BL_add-new-task {
    display: grid;
    width: calc(100vw - 10%);
  }

  .BL_btn-block {
    display: grid;
    grid-template-columns: 1fr 1fr;
    width: calc(100vw - 10%);
    gap: 0.5rem;
    margin-bottom: 1rem;
  }
}

@media (max-width: 1400px) {
  .BL_modal {
    top: 10%;
    left: 10%;
    right: 10%;
  }
}

